src/objects/FSTR__Test_PCE__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>Object used in the ProcessComposer test cases as a container for processes to run in.</description>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close_Steps_Not_Created__c</fullName>
        <inlineHelpText>This field is automatically updated by the Auto Close page with how many steps are being skipped by the auto close action.</inlineHelpText>
        <label>Auto Close - Steps Not Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Test_BPDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Test_BPDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Queue_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Queue Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Event_Sub_Type__c</fullName>
        <label>Event Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Instance</label>
        <referenceTo>FSTR__Process_Instance__c</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Test PCE was created from a Recurring Business Process record this field links back to that record.</inlineHelpText>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Skipped_Steps__c</fullName>
        <description>Stores the steps in a stage that were not created (in JSON). This field is used to determine whether to create child steps (by checking for skipped steps that are set to &apos;ignore in stage completion&apos;) or to proceed with the completion of a stage even if not all steps in that stage are completed.</description>
        <label>Skipped Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Currency__c</fullName>
        <label>Test Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Date_Time__c</fullName>
        <label>Test Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Email__c</fullName>
        <label>Test Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Number_Field__c</fullName>
        <label>Test Number Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_PCE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test PCE</label>
        <referenceTo>FSTR__Test_PCE__c</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Percent__c</fullName>
        <label>Test Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Picklist_II__c</fullName>
        <label>Test Picklist II</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Test_Picklist__c</fullName>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Test_String_Field__c</fullName>
        <label>Test String Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Test_Text_Area__c</fullName>
        <label>Test Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__pce_definition_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test Unlink</description>
        <inlineHelpText>Test Unlink</inlineHelpText>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__step_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Test PCEs</relationshipLabel>
        <relationshipName>Test_PCEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test PCE</label>
    <nameField>
        <displayFormat>TPCE-{0000000}</displayFormat>
        <label>Test PCE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test PCEs</pluralLabel>
    <recordTypes>
        <fullName>FSTR__Record_Type_1</fullName>
        <active>true</active>
        <label>Record Type 1</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__Record_Type_2</fullName>
        <active>true</active>
        <label>Record Type 2</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__ZZ_Record_Type_To_UI_With</fullName>
        <active>true</active>
        <description>do not use this in unit tests just in UI testing.</description>
        <label>ZZ Record Type To UI With</label>
    </recordTypes>
    <recordTypes>
        <fullName>FSTR__ZZ_Scheduling_Record_Type</fullName>
        <active>true</active>
        <label>ZZ Scheduling Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>